--- a/android/components/hotel-module/bundle1/build.gradle
+++ b/android/components/hotel-module/bundle1/build.gradle
@@ -20,3 +20,12 @@ android {
     }
 
 }
+apply from : "${rootDir}/script/module_publisher.gradle"
+publish {
+    name = "hotel-bundle1"
+    groupId = gradle.groupId
+    artifactId = "hotel-bundle1"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
