--- a/android/components/hotel-module/bundle2/build.gradle
+++ b/android/components/hotel-module/bundle2/build.gradle
@@ -4,9 +4,30 @@ apply from: "${rootDir.path}/script/ui_tradition.gradle"
 android {
     defaultConfig {
     }
+    flavorDimensions 'platform', 'publishType'
+    productFlavors {
+        tv {
+            dimension 'platform'
+        }
+        phone {
+            dimension 'platform'
+        }
+        beta {
+            dimension 'publishType'
+        }
+    }
 
 }
 dependencies {
 //    implementation project(path: ':components:hotel-module:foundation')
     implementation 'com.facebook.device.yearclass:yearclass:2.1.0'
+}
+apply from : "${rootDir}/script/module_publisher.gradle"
+publish {
+    name = "hotel-bundle2"
+    groupId = gradle.groupId
+    artifactId = "hotel-bundle2"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
 }
