--- a/android/framework/image/build.gradle
+++ b/android/framework/image/build.gradle
@@ -87,3 +87,12 @@ dependencies {
      * ===============================image end=============================
      */
 }
+apply from : "${rootDir}/script/module_publisher.gradle"
+publish {
+    name = "framework-image"
+    groupId = gradle.groupId
+    artifactId = "framework-image"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
