--- a/android/components/account-module/impl/build.gradle
+++ b/android/components/account-module/impl/build.gradle
@@ -62,3 +62,12 @@ dependencies {
 //    implementation 'com.tencent.mm.opensdk:wechat-sdk-android:6.8.0'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:6.7.9'//微信官方依赖库
 }
+apply from : "${rootDir}/script/module_publisher.gradle"
+publish {
+    name = "account-impl"
+    groupId = gradle.groupId
+    artifactId = "account-impl"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
