--- a/android/components/box-module/tool/build.gradle
+++ b/android/components/box-module/tool/build.gradle
@@ -11,3 +11,13 @@ android {
 dependencies {
 
 }
+
+apply from : "${rootDir}/script/module_publisher.gradle"
+publish {
+    name = "box-tool"
+    groupId = gradle.groupId
+    artifactId = "box-tool"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
