--- a/android/components/home-module/myhome/build.gradle
+++ b/android/components/home-module/myhome/build.gradle
@@ -26,3 +26,12 @@ android {
 dependencies {
 //    lintChecks project(path: ':lint-rules')
 }
+apply from : "${rootDir}/script/module_publisher.gradle"
+publish {
+    name = "home-myhome"
+    groupId = gradle.groupId
+    artifactId = "home-myhome"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
