--- a/android/components/hotel-module/hotel-lint/build.gradle
+++ b/android/components/hotel-module/hotel-lint/build.gradle
@@ -38,8 +38,9 @@ jar {
 apply from: "${rootDir}/script/module_publisher.gradle"
 publish {
     name="hotel-lint"
-    groupId = 'io.github.jamesfchen'
+    groupId = gradle.groupId
     artifactId = "hotel-lint"
     version = "1.0.0-SNAPSHOT"
-    website = "https://github.com/JamesfChen/bundles-assembler"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "java"
 }
