--- a/android/components/im-module/chatroom/build.gradle
+++ b/android/components/im-module/chatroom/build.gradle
@@ -14,3 +14,12 @@ android {
 }
 dependencies {
 }
+apply from : "${rootDir}/script/module_publisher.gradle"
+publish {
+    name = "im-chatroom"
+    groupId = gradle.groupId
+    artifactId = "im-chatroom"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
