--- a/android/framework/av/build.gradle
+++ b/android/framework/av/build.gradle
@@ -32,3 +32,12 @@ dependencies {
      * ===============================av end=============================
      */
 }
+apply from : "${rootDir}/script/module_publisher.gradle"
+publish {
+    name = "framework-av"
+    groupId = gradle.groupId
+    artifactId = "framework-av"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
