--- a/android/framework/hybrid/build.gradle
+++ b/android/framework/hybrid/build.gradle
@@ -1,1 +1,10 @@
 apply from: "${rootDir}/script/foundation_module.gradle"
+apply from : "${rootDir}/script/module_publisher.gradle"
+publish {
+    name = "framework-hybrid"
+    groupId = gradle.groupId
+    artifactId = "framework-hybrid"
+    version = "1.0.0-SNAPSHOT"
+    website = "https://github.com/JamesfChen/spacecrafe-android"
+    buildVariant = "debug"
+}
