--- a/android/components/account-module/impl/build.gradle
+++ b/android/components/account-module/impl/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'com.umeng.umsdk:share-wx:7.1.7' //微信完整版
 //    implementation 'com.tencent.mm.opensdk:wechat-sdk-android:6.8.0'
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-without-mta:6.7.9'//微信官方依赖库
+    //test个
 }
 apply from : "${rootDir}/script/module_publisher.gradle"
 publish {
