--- a/android/components/hotel-module/foundation/build.gradle
+++ b/android/components/hotel-module/foundation/build.gradle
@@ -23,8 +23,8 @@ android {
 //    }
 }
 dependencies {
-    lintChecks project(path: ':components:hotel-module:hotel-lint')
-    lintPublish project(path: ':components:hotel-module:hotel-lint')
+//    lintChecks project(path: ':components:hotel-module:hotel-lint')
+//    lintPublish project(path: ':components:hotel-module:hotel-lint')
 }
 apply from : "${rootDir}/script/module_publisher.gradle"
 publish {
