--- a/android/build.gradle
+++ b/android/build.gradle
@@ -57,7 +57,8 @@ buildscript {
         classpath("com.tencent.matrix:matrix-gradle-plugin:${MATRIX_VERSION}") { changing = true }
         classpath 'com.google.firebase:firebase-appdistribution-gradle:2.1.2'
 //        classpath "com.uber:infer-plugin:0.7.4"
-//        classpath 'com.github.jamesfchen:lifecycle-plugin:1.0.0'
+        classpath "io.github.jamesfchen:lifecycle-plugin:1.0.0"
+        classpath "io.github.jamesfchen:ibc-plugin:1.0.1"
 
         classpath "com.alibaba:arouter-register:1.0.2"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.5"
@@ -67,6 +68,12 @@ buildscript {
         classpath "cn.hikyson.methodcanary:plugin:0.15.5"
     }
 }
+
+
+//plugins{
+//    id("io.github.jamesfchen.ibc-plugin") apply(false)
+//    id("io.github.jamesfchen.lifecycle-plugin") apply(false)
+//}
 
 allprojects {
     repositories {
