--- a/android/script/bundle_module.gradle
+++ b/android/script/bundle_module.gradle
@@ -72,6 +72,7 @@ dependencies {
     kapt 'com.alibaba:arouter-compiler:1.5.2'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
 //    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    api 'io.github.jamesfchen:ibc-api:1.0.2'
 }
 
 
